--- a/singolo2.css
+++ b/singolo2.css
@@ -22,8 +22,52 @@ body {
 /*Portfolio start here*/
 
 .portfolio {
-  background-color: #f06c64;
-  border-bottom: 6px solid #ea676b;
+  background-color: #2d303a;
+  border-bottom: 6px solid #323746;
+}
+
+.portfolio .wrapper {
+  padding: 60px 40px 67px;
+}
+
+.portfolio__top h2 {
+  font-size: 30px;
+  color: #666d89;
+  letter-spacing: 0.2px;
+  font-weight: 900;
+}
+
+.portfolio__top p {
+  font-size: 18px;
+  font-weight: 300;
+  margin-top: 22px;
+  letter-spacing: -0.225px;
+  color: #767e9e;
+}
+
+.portfolio__navigation {
+  margin-top: 15px;
+  margin-left: 1px;
+}
+
+.navigation_portfolio {
+  display: flex;
+}
+
+.navigation_portfolio_item {
+  list-style: none;
+  margin-right: 10px;
+}
+
+.navigation_portfolio_item a {
+  text-decoration: none;
+  border: 1px solid #666d89;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: normal;
+  color: #767e9e;
+  text-decoration: none;
+  padding: 3px 7px 3px 6px;
 }
 
 /*About-us start here*/
