--- a/singolo2.css
+++ b/singolo2.css
@@ -4,13 +4,22 @@
   font-weight: 900;
 }
 
+@font-face {
+  font-family: 'Lato';
+  src: url(assets/Lato-Light.ttf);
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Lato';
+  src: url(assets/Lato-Regular.ttf);
+  font-weight: 400;
+}
+
 * {
   box-sizing: border-box; 
   margin: 0;
   padding: 0;
-}
-
-body {
   font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 
@@ -27,7 +36,7 @@ body {
 }
 
 .portfolio .wrapper {
-  padding: 60px 40px 67px;
+  padding: 60px 40px 47px;
 }
 
 .portfolio__top h2 {
@@ -38,9 +47,9 @@ body {
 }
 
 .portfolio__top p {
+  margin-top: 22px;
   font-size: 18px;
   font-weight: 300;
-  margin-top: 22px;
   letter-spacing: -0.225px;
   color: #767e9e;
 }
@@ -50,29 +59,222 @@ body {
   margin-left: 1px;
 }
 
-.navigation_portfolio {
+.navigation-cover {
   display: flex;
+  justify-content: flex-start;
 }
 
-.navigation_portfolio_item {
+.portfolio__navigation_button {
   list-style: none;
   margin-right: 10px;
 }
 
-.navigation_portfolio_item a {
-  text-decoration: none;
+.portfolio__navigation_button a{
+  display: block;
   border: 1px solid #666d89;
   border-radius: 5px;
   font-size: 12px;
-  font-weight: normal;
+  font-weight: 400;
   color: #767e9e;
-  text-decoration: none;
-  padding: 3px 7px 3px 6px;
+  padding: 2.5px 7px 3.5px 6px;
+  letter-spacing: -0.05px;
+  cursor: pointer;
+  transition-duration: .2s;
 }
+
+/*fix some margin and padding for pixel perfect*/
+
+.portfolio__navigation_button:nth-child(3) a{
+  padding: 2.5px 6px 3.5px 5px;
+}
+
+.portfolio__navigation_button:nth-child(4) a{
+  padding: 2.5px 6px 3.5px 5px;
+}
+
+/*end fix some margin and padding for pixel perfect*/
+
+.portfolio__navigation_button a:hover{
+  border: 1px solid #c5c5c5;
+  color: #dedede;
+  transition-duration: .2s;
+}
+
+.navigation_button-active a{
+  border-color: #c5c5c5;
+  color: #dedede;
+}
+
+.portfolio__items {
+  display: flex;
+  margin-top: 19px;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.portfolio__item { 
+  display: none;
+  flex: 0 0 calc(25%-20px);
+  width: 220px;
+  height: 187px;
+  margin-bottom: 20px;
+} 
+
+.portfolio__item:nth-child(-n+12) { 
+    display:block; 
+} 
 
 /*About-us start here*/
 
 .about-us {
   background-color: #f2f2f2;
   border-bottom: 6px solid #ffffff;
+}
+
+.about-us .wrapper {
+  padding: 59px 40px 67px;
+}
+
+
+.about-us__top h2 {
+  font-size: 30px;
+  color: #666d89;
+  letter-spacing: 0.2px;
+  font-weight: 900;
+}
+
+.about-us__top p {
+  margin-top: 18px;
+  font-size: 18px;
+  font-weight: 300;
+  letter-spacing: -0.05px;
+  line-height: 30px;
+  color: #767e9e;
+}
+
+.about-us__items {
+  display: flex;
+  margin-top: 45px;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+}
+
+.about-us__item {
+  flex: 0 0 300px;
+}
+
+.about-us__item:nth-child(2) {
+  margin-left: -2px;
+}
+
+.about-us__item h3 {
+  font-size: 19px;
+  color: #666d89;
+  margin-top: 11px;
+  letter-spacing: -0.54px;
+}
+
+.about-us__item p {
+  margin-top: 8px;
+  font-size: 12px;
+  font-weight: 400;
+  color: #767e9e;
+  line-height: 21px;
+  letter-spacing: -0.15px;
+}
+
+
+/*fix some margin and padding for pixel perfect*/
+.about-us__item:nth-child(3) .item_social-tags {
+  margin-left: 0px;
+}
+
+.about-us__item:nth-child(1) h3 {
+  margin-left: -1px;
+}
+
+.about-us__item:nth-child(3) h3 {
+  margin-left: -1px;
+}
+
+.about-us__item:nth-child(3) p {
+  margin-left: -1px;
+}
+
+/*end fix some margin and padding for pixel perfect*/
+
+.item_social-tags {
+  margin-top: 24px;
+  margin-left: 1px;
+}
+
+.social-tags {
+  display: flex;
+  justify-content: left;
+}
+
+.social-tag {
+  list-style: none;
+  margin-right: 8px;
+}
+
+.social-tag a {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  transition-duration: .2s;
+}
+
+.social-tag a:hover {
+  opacity: 0.6;
+  transition-duration: .2s;
+}
+
+.icon-facebook {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #6a718c;
+  border-radius: 50%;
+  background-image: url(assets/icon-facebook.svg);
+  background-size: 25px 18px;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.icon-plus-google {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #6a718c;
+  border-radius: 50%;
+  background-image: url(assets/icon-google-plus.svg);
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+  background-position: center 6px;
+}
+
+.icon-twitter {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #6a718c;
+  border-radius: 50%;
+  background-image: url(assets/icon-twitter.svg);
+  background-size: 17px 17px;
+  background-repeat: no-repeat;
+  background-position: center 6px;
+}
+
+.icon-linkedin {
+  display: block;
+  width: 32px;
+  height: 32px;
+  border: 1px solid #6a718c;
+  border-radius: 50%;
+  background-image: url(assets/icon-linkedin.svg);
+  background-size: 24px 24px;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
